abstract new naming for message sending + delete flowlauncher + nonworking version of FunSearch (just need to rename stuff) + delete Remote and proxflows folder

--- a/examples/minimal reverse number/reverseNumberSequential.yaml
+++ b/examples/minimal reverse number/reverseNumberSequential.yaml
@@ -1,5 +1,6 @@
 name: "ReverseNumberTwice"
 description: "A sequential flow that reverses a number twice."
+_target_: reverse_number_sequential.ReverseNumberSequentialFlow.instantiate_from_default_config
 
 # input and output interfaces of SequentialFlow
 input_interface:
@@ -12,36 +13,13 @@ output_interface:
 subflows_config:
   first_reverse_flow:
     _target_: reverse_number_atomic.ReverseNumberAtomicFlow.instantiate_from_default_config
+    user_id: local
+    flow_type: ReverseNumberAtomicFlow_served
     name: "ReverseNumberFirst"
     description: "A flow that takes in a number and reverses it."
   second_reverse_flow:
     _target_: reverse_number_atomic.ReverseNumberAtomicFlow.instantiate_from_default_config
+    user_id: local
+    flow_type: ReverseNumberAtomicFlow_served
     name: "ReverseNumberSecond"
-    description: "A flow that takes in a number and reverses it."
-
-# Define order of execution of subflows and input & output interfaces for proper execution
-topology:
-  #fist flow to execute
-  - goal: reverse the input number
-    input_interface:
-      _target_: aiflows.interfaces.KeyInterface
-      keys_to_select: ["number"]
-    flow: first_reverse_flow
-    output_interface:
-      _target_: aiflows.interfaces.KeyInterface
-      keys_to_rename:
-        output_number: first_reverse_output
-      keys_to_select: ["first_reverse_output"]
-    reset: false
-  #second flow to execute
-  - goal: reverse the output of the first reverse
-    input_interface:
-      _target_: aiflows.interfaces.KeyInterface
-      keys_to_rename:
-        first_reverse_output: number
-      keys_to_select: ["number"]
-    flow: second_reverse_flow
-    output_interface:
-      _target_: aiflows.interfaces.KeyInterface
-      keys_to_select: ["output_number"]
-    reset: false
+    description: "A flow that takes in a number and reverses it AGAIN."
