--- a/examples/minimal reverse number/reverseNumberAtomic.yaml
+++ b/examples/minimal reverse number/reverseNumberAtomic.yaml
@@ -1,11 +1,7 @@
 name: "ReverseNumber"
 description: "A flow that takes in a number and reverses it."
 
-input_interface:
-  _target_: aiflows.interfaces.KeyInterface
-  keys_to_select: ["number"]
+_target_: reverse_number_atomic.ReverseNumberAtomicFlow.instantiate_from_default_config
 
-output_interface: # Connector between the Flow's output and the caller
-  _target_: aiflows.interfaces.KeyInterface
-  keys_to_rename:
-    output_number: "reversed_number" # Rename the output_number to reversed_number
+input_interface: number
+output_interface: reversed_number
