--- a/examples/mauro_examples/ReverseNumber/ReverseNumberFlowModule/ReverseNumberSequentialFlow.yaml
+++ b/examples/mauro_examples/ReverseNumber/ReverseNumberFlowModule/ReverseNumberSequentialFlow.yaml
@@ -2,8 +2,6 @@ name: "ReverseNumberTwice"
 description: "A sequential flow that reverses a number twice."
 _target_: ReverseNumberFlowModule.ReverseNumberSequentialFlow.instantiate_from_default_config
 
-init_state:
-  mock_state: "WOW"
 # input and output interfaces of SequentialFlow
 input_interface:
   - "number"
@@ -14,16 +12,12 @@ output_interface:
 #configuration of subflows
 subflows_config:
   first_reverse_flow:
-    _target_: ReverseNumberFlowModule.ReverseNumberAtomicFlow.instantiate_from_default_config
     user_id: local
-    init_state:
-      mock_state1: "yeahhh"
-    flow_type: ReverseNumberAtomicFlow_served
+    flow_endpoint: reverse_number_atomic
     name: "ReverseNumberFirst"
     description: "A flow that takes in a number and reverses it."
   second_reverse_flow:
-    _target_: ReverseNumberFlowModule.ReverseNumberAtomicFlow.instantiate_from_default_config
     user_id: local
-    flow_type: ReverseNumberAtomicFlow_served
+    flow_endpoint: reverse_number_atomic
     name: "ReverseNumberSecond"
     description: "A flow that takes in a number and reverses it AGAIN."
