--- a/chatflows-ui/HumanUIFlow.yaml
+++ b/chatflows-ui/HumanUIFlow.yaml
@@ -4,6 +4,6 @@ description: "Human UI."
 _target_: aiflows.base_flows.AtomicFlow.instantiate_from_default_config
 
 input_interface:
-  - "api_output"
+  - "query"
 output_interface:
   - "human_input"
