--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "litellm==1.0.0",
     "colink==0.3.7",
     "termcolor==2.4.0",
+    "streamlit==1.32.2",
 ]
 
 [project.urls]
